--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ img {
 }
 
 footer {
-    background-color: rgb(127, 255, 206);
+    background-color: grey;
     padding: 30px;
     margin-top: 100px;
     clear: both;
