still need to fit background img

--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ img {
 }
 
 footer {
-    background-color: grey;
+    background-color: #0275d8;
     padding: 30px;
-    margin-top: 100px;
+    margin-top: 150px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
@@ -19,3 +19,20 @@ footer h2 {
 .img-thumbnail {
     float: left;
 }
+
+/* body {
+    background-image: url(./images/building2.jpg);
+    background-size: cover;
+}
+
+hr {
+    background: white;
+}
+
+.contact-form {
+    background: rgba(0, 0, 0, .6);
+    color: white;
+    margin-top: 100px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px 3px gray;
+} */
