--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 img {
     max-width: 100%;
-    margin-top: 50px;
+    margin-top: 15px;
     margin-bottom: 50px;
 }
 
 .contactBody {
-    background-image: url(./images/building.jpg);
+    background-image: url(./images/projectBackground1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -13,7 +13,7 @@ img {
 }
 
 .portfolioBody {
-    background-image: url(./images/building2.jpg);
+    background-image: url(./images/projectBackground1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -21,7 +21,7 @@ img {
 }
 
 .indexBody {
-    background-image: url(./images/laptop.jpg);
+    background-image: url(./images/projectBackground1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -42,8 +42,8 @@ hr {
 }
 
 footer {
-    background-color: #0275d8;
-    padding: 30px;
+    background-color: black;
+    padding: 10px;
     margin-top: 150px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -54,11 +54,18 @@ footer h2 {
     font-size: 20px;
 }
 
+/* footer */
 .img-thumbnail {
     /* float: left; */
-
+    height: 350px;
+    width: 350px;
+    /* object-fit: auto; */
+    image-rendering: auto;
+    image-rendering: crisp-edges;
+    image-rendering: pixelated;
 }
 
 .image-wrapper {
     text-align: center;
+    margin-top: 25px;
 }
