--- a/assets/style.css
+++ b/assets/style.css
@@ -39,12 +39,13 @@ hr {
     margin-top: 100px;
     padding: 20px;
     box-shadow: 0px 0px 10px 3px gray;
+    margin-bottom: 50px;
 }
 
 footer {
     background-color: black;
     padding: 10px;
-    margin-top: 150px;
+    margin-top: 200px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
